添加部分内容

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Your project name
+title: 学习笔记
 lang: en
-description: a catchy description for your project
+description: lincyaw的学习笔记
 
 remote_theme: rundocs/jekyll-rtd-theme
 
